--- a/idcpalmoss.plist
+++ b/idcpalmoss.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://示例请修改/IDCPalmOSS.ipa</string>
+					<string>http://10.1.6.79:8080/upload/downloadApp/IDCPalmOSS.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
