--- a/idcServicePad.plist
+++ b/idcServicePad.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://221.176.66.12/upload/downloadApp/IDC_ZFW_phone.ipa</string>
+					<string>http://221.176.66.12/upload/downloadApp/IDC_ZFW_pad.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>IDC客户自服务平台（iPhone）</string>
+				<string>IDC客户自服务平台（iPad）</string>
 			</dict>
 		</dict>
 	</array>
