--- a/idcpalmoss.plist
+++ b/idcpalmoss.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://221.176.66.12/upload/downloadApp/IDCPalmOSS.ipa</string>
+					<string>http://idc.chinamobile.com/upload/downloadApp/IDCPalmOSS.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
