--- a/idcServicePhone.plist
+++ b/idcServicePhone.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://idc.chinamobile.com/upload/downloadApp/IDC_ZFW_phone.ipa</string>
+					<string>http://211.138.144.26:18080/upload/downloadApp/IDC_ZFW_phone.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
