--- a/idcServicePad65.plist
+++ b/idcServicePad65.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://221.176.66.12/upload/downloadApp/WebViewPro_pad.ipa</string>
+					<string>http://211.138.144.26:18080/upload/downloadApp/WebViewPro_pad.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
