--- a/idcServicePad.plist
+++ b/idcServicePad.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://211.138.144.26:18080/upload/downloadApp/IDC_ZFW_pad.ipa</string>
+					<string>http://vip.idc.chinamobile.com/upload/downloadApp/IDC_ZFW_pad.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
